--- a/www/sds_newsletter_2021.Rmd
+++ b/www/sds_newsletter_2021.Rmd
@@ -69,6 +69,17 @@ I continue to be in awe of the resilience of Smithies (and their general fabulou
 
 #### Albert Y. Kim
 
+Hello SDS world! It being my sabbatical year, I taught a single course in the fall: SDS 390 Ecological Forecasting. It was among the most rewarding teaching experiences of my career. Despite the remote circumstances, I felt like I had a chance to really bond with every student in the class. Not only did we apply data science tools and technology to answer ecologigcal questions, but we also discussed larger topics like time-management, healthy work-life balance, and interpersonal skills in workplace settings.
+
+On the research side of things, my work in forest ecology has been getting curiouser and curiouser. Here are three projects I’ve been involved in:
+
+1. Studying the growth phenology of trees i.e. how year-to-year changes in within-year climate variation is impacting the growth of trees. We found evidence that suggests even though growing seasons are getting longer (springs that start earlier and falls that end later), this is not translating to increased tree growth :(
+2. Using Bayesian Hidden Markov Models to fuse disparate sources of tree data into a single model with the ultimate goal of forecasting the growth of trees. 
+3. Implementing GitHub Actions continuous integration cyberinfrastructure to automate quality assurance and control of data on forest dynamics. The basic pipeline is: ecologists gather data in the field and then push the resulting spreadsheets to GitHub. This will then trigger data scripts that will automatically verify data quality and produce a dashboard of reports.
+
+Other than than during this year of COVID I’ve been playing a lot of tennis, fell into a Nintendo Switch Zelda Breath of the Wild wormhole for most of late December and January, and been doing a lot of soul-searching as a result of the anti-Asian hate crimes that occurred in Atlanta in March. Lastly, my beloved Montreal Canadiens made it to the NHL Stanley Cup Finals for the first time since I was 12 years old. Despite an odds-defying run to the finals, they lost in 5 games to the repeat champion Tampa Bay Lightning. 
+
+
 
 #### Katherine M. Kinnaird
 
