--- a/www/sds_newsletter_2021.Rmd
+++ b/www/sds_newsletter_2021.Rmd
@@ -65,7 +65,9 @@ I continue to be in awe of the resilience of Smithies (and their general fabulou
 
 #### Will Hopper
 
+This fall, I'll be returning to teach my greatest hits, SDS 201 (Statistical Methods for Undergraduates) and SDS 291 (Multiple Regression). I'm most excited to adapt some ideas and methods for creating a more interactive lecture experience, inspired by the experience of teaching online, to the physical classroom. Oddly enough, I've taught more semesters online than in-person, so in some ways returning to campus will be the strange adaptation, rather than the other way around! Regardless of locale, I'm sure I'll continue to be impressed by the tenacity and commitment of the students in my classes.
 
+I continued to enjoy playing competitive Pokémon in the [VGC format](https://www.reddit.com/r/PokemonVGC/comments/5bmuua/so_you_want_to_play_vgc_newcomers_start_here/), and I even won my first prize money (well, $24, but still, it's something!). I'm enjoying the current series 10 ruleset, and looking forward to the upcoming Diamond/Pearl remakes coming this fall. Pokémon is a game **full** of probabilities, so expect a few examples if you're taking one of my classes!
 
 #### Albert Y. Kim
 
