--- a/www/sds_newsletter_2021.Rmd
+++ b/www/sds_newsletter_2021.Rmd
@@ -59,6 +59,11 @@ I continue to be in awe of the resilience of Smithies (and their general fabulou
 
 #### Randi Garcia
 
+This year was full of ups and downs for me...and for many others it seems. In the fall (after pivoting my research questions due to the COVID shut down!) I successfully collected daily-diary data for a research project investigating household and childcare labor among cohabitating couples with at least one person working from home. It was exciting to start analyzing this data set with my students in my Spring 2021 research seminar. We have some interesting results that we'll be writing up for publication together! In addition, this year I had a paper written with Sarah Bingham '22 on Instagram use and self-objectification accepted for publication in Psychology of Popular Media and I submitted a paper written with Kat Kyuchukova, Asha Hinson, and Lanee Jung on objectification in interactions among women for publication. 
+
+After a Spring 2020 sabbatical and a Fall 2020 course release, I had my first remote teaching experience teaching SDS 290 during J-term this year. Shout out to Julie Destine and Audrey Bertin --- I simply could not have taught this crazy [face-paced](https://randilgarcia.github.io/sds290interterm21/schedule.html) J-term course without your assistance and swift grading! And shout out to all of my J-term students for working so hard. It was a pleasure to have that experience with you! In the Spring I taught my Psychology of Women and Gender course and my Research Seminar. It was nice to find that I was still able to build relationships with my students, and to help them build community with each other, even in the remote environment. But I'm definitely ready to get back in the classroom! 
+
+I read lots of classic books this year including Pride and Prejudice, the Harry Potter series, Dune, and the Golden Compass series. All for the very first time! I am currently reading the Lord or the Rings: Two Towers. I also read [The Fate of Food](https://www.amandalittle.com/fateoffood) and [Braiding Sweetgrass](https://milkweed.org/book/braiding-sweetgrass) which was amazing --- thanks to Ester Zhao for the recommendation! There was also a lot of Nintendo playing and gardening in my life.
 
 #### Katherine Halvorsen
 
