--- a/www/sds_newsletter_2021.Rmd
+++ b/www/sds_newsletter_2021.Rmd
@@ -102,6 +102,7 @@ As if I wasn't excited enough for my start day at Smith, that same day an articl
 
 - [Brittany Bennett '16](https://www.linkedin.com/in/thebbennett/): is on her second year of serving as the Data Director of the Sunrise Movement. She leverages analytics engineering to uncover insight for organizers working to pass a Green New Deal. [You can follow her writing here](https://www.brittanybennett.com/blog)
 
+- [Sara Stoudt '15](https://sastoudt.github.io/): I spent the year teaching other Smithies! My favorite activity was making ["data phys"](https://nebigdatahub.org/data-visualization-beyond-the-screen/) to help visualizations come to life off our screens. Another highlight of the year was the release of Deb Nolan and my book, *Communicating with Data: The Art of Writing for Data Science*. [Check it out!](https://twitter.com/sastoudt/status/1390675020209340420?s=20). Now I'm off to my next adventure at Bucknell University where I'll start as an Assistant Professor in the fall. 
 
 ## What's next? 
 
