Randi update and clean up

--- a/www/sds_newsletter_2021.Rmd
+++ b/www/sds_newsletter_2021.Rmd
@@ -59,14 +59,11 @@ I continue to be in awe of the resilience of Smithies (and their general fabulou
 
 #### Randi Garcia
 
-This year was full of ups and downs for me...and for many others it seems. In the fall (after pivoting my research questions due to the COVID shut down!) I successfully collected daily-diary data for a research project investigating household and childcare labor among cohabitating couples with at least one person working from home. It was exciting to start analyzing this data set with my students in my Spring 2021 research seminar. We have some interesting results that we'll be writing up for publication together! In addition, this year I had a paper written with Sarah Bingham '22 on Instagram use and self-objectification accepted for publication in Psychology of Popular Media and I submitted a paper written with Kat Kyuchukova, Asha Hinson, and Lanee Jung on objectification in interactions among women for publication. 
+This year was full of ups and downs for me...and for many others it seems. In the fall (after pivoting my research questions due to the COVID shut down!) I successfully collected daily-diary data for a research project investigating household and childcare labor among cohabitating couples with at least one person working from home. It was exciting to start analyzing this data set with my students in my Spring 2021 research seminar. We have some interesting results that we'll be writing up for publication together! In addition, this year I had a paper written with **Sarah Bingham '22** on Instagram use and self-objectification accepted for publication in Psychology of Popular Media and I submitted a paper written with **Kat Kyuchukova '19**, **Asha Hinson '19**, and **Lanee Jung '20** on objectification in interactions among women for publication. 
 
-After a Spring 2020 sabbatical and a Fall 2020 course release, I had my first remote teaching experience teaching SDS 290 during J-term this year. Shout out to Julie Destine and Audrey Bertin --- I simply could not have taught this crazy [face-paced](https://randilgarcia.github.io/sds290interterm21/schedule.html) J-term course without your assistance and swift grading! And shout out to all of my J-term students for working so hard. It was a pleasure to have that experience with you! In the Spring I taught my Psychology of Women and Gender course and my Research Seminar. It was nice to find that I was still able to build relationships with my students, and to help them build community with each other, even in the remote environment. But I'm definitely ready to get back in the classroom! 
+After a Spring 2020 sabbatical and a Fall 2020 course release, I had my first remote teaching experience teaching SDS 290 during J-term this year. Shout out to **Julie Destine '21** and **Audrey Bertin '21** --- I simply could not have taught this crazy [face-paced](https://randilgarcia.github.io/sds290interterm21/schedule.html) J-term course without your assistance and swift grading! And shout out to all of my J-term students for working so hard. It was a pleasure to have that experience with you! In the Spring I taught my Psychology of Women and Gender course and my Research Seminar. It was nice to find that I was still able to build relationships with my students, and to help them build community with each other, even in the remote environment. But I'm definitely ready to get back in the classroom! 
 
-I read lots of classic books this year including Pride and Prejudice, the Harry Potter series, Dune, and the Golden Compass series. All for the very first time! I am currently reading the Lord or the Rings: Two Towers. I also read [The Fate of Food](https://www.amandalittle.com/fateoffood) and [Braiding Sweetgrass](https://milkweed.org/book/braiding-sweetgrass) which was amazing --- thanks to Ester Zhao for the recommendation! There was also a lot of Nintendo playing and gardening in my life.
-
-#### Katherine Halvorsen
-
+I read lots of classic books this year including *Pride and Prejudice*, the *Harry Potter* series, *Dune*, and the *Golden Compass* series. All for the very first time! I am currently reading the *Lord or the Rings: Two Towers*. I also read [*The Fate of Food*](https://www.amandalittle.com/fateoffood) and [*Braiding Sweetgrass*](https://milkweed.org/book/braiding-sweetgrass) which was amazing --- thanks to **Ester Zhao '21** for the recommendation! There was also a lot of Nintendo playing and gardening in my life.
 
 #### Will Hopper
 
@@ -76,7 +73,7 @@ I continued to enjoy playing competitive Pokémon in the [VGC format](https://ww
 
 #### Albert Y. Kim
 
-Hello SDS world! It being my sabbatical year, I taught a single course in the fall: SDS 390 Ecological Forecasting. It was among the most rewarding teaching experiences of my career. Despite the remote circumstances, I felt like I had a chance to really bond with every student in the class. Not only did we apply data science tools and technology to answer ecologigcal questions, but we also discussed larger topics like time-management, healthy work-life balance, and interpersonal skills in workplace settings.
+Hello SDS world! It being my sabbatical year, I taught a single course in the fall: SDS 390 Ecological Forecasting. It was among the most rewarding teaching experiences of my career. Despite the remote circumstances, I felt like I had a chance to really bond with every student in the class. Not only did we apply data science tools and technology to answer ecological questions, but we also discussed larger topics like time-management, healthy work-life balance, and interpersonal skills in workplace settings.
 
 On the research side of things, my work in forest ecology has been getting curiouser and curiouser. Here are three projects I’ve been involved in:
 
