--- a/www/sds_newsletter_2021.Rmd
+++ b/www/sds_newsletter_2021.Rmd
@@ -117,6 +117,14 @@ As if I wasn't excited enough for my start day at Smith, that same day an articl
 
 - [Brittany Bennett '16](https://www.linkedin.com/in/thebbennett/): is on her second year of serving as the Data Director of the Sunrise Movement. She leverages analytics engineering to uncover insight for organizers working to pass a Green New Deal. [You can follow her writing here](https://www.brittanybennett.com/blog)
 
+- [Jennifer Kirk '08](linkedin.com/in/jennifer-l-kirk-4412875/): I’m still happily working as a statistical reviewer at US FDA’s Center for Biologics Evaluation and Research. I work primarily on vaccines, and the past year or so has been quite interesting, if nothing else. I’m also a member of the steering committee for the ASA Biopharm Section 2021 Regulator-Industry Workshop.  
+  I’d like to put in an advertisement for the FDA’s summer fellowship program which is open to undergrads, grad students, and recent graduates in STEM fields (including non-citizens): https://orise.orau.gov/fda/.  
+  I think the FDA is also currently hiring for PhD statisticians positions (maybe also masters, depends on the group) for citizens and non-citizens, if any alums are searching for jobs. Job advertisements are usually posted to the ASA’s job listing--let me know if you need a link and I can get one from work.
+
+- [Maja Miloslavjevic '14](https://www.linkedin.com/in/maja-milosavljevic-52762297/): I'm about to have my 5 year anniversary at Microsoft in a few months. I spent the first few years as a Program Manager but switched career tracks and am now a Data & Applied Scientist. It feels so good to be back to my DS roots! 
+
+- [Lizzy (Atkins) Offermann '15](https://www.linkedin.com/in/elizabethoffermann/): Back in December 2020, I started my current role as the Senior Business Analyst for the 1,500+ provider Clinically Integrated Network for LifeBridge Health, a $2.5 billion regional health care organization based in northwest Baltimore and the surrounding counties. I govern the data quality and data flow across multiple electronic medical record (EMR) systems among a range of commercial, Medicaid, and Medicare value-based care programs, contributing to a deep knowledge of data integration in and out of EMRs. I have enjoyed working on an executive-level, overseeing the data for a multi-hospital network and providing usable data visualizations to leadership. In the meantime, I have been finishing up my master’s degree in Clinical and Translational Research from George Washington University and will officially conclude by the end of next month! I am currently working on my master's capstone project with Randy Frost, Professor Emeritus of Psychology and it has been truly fabulous to reconnect especially over an interesting study! In my free time (what is that again?), I have been busy enjoying life with my 3.5 year old twins and husband, continuing my role as the head of the Smith Alumnae Admissions for the tri-state area, appreciating my role on the Board of the Smith College Club of Baltimore, and have been progressing in my role as Treasurer on the Smith Class of 2015 Cabinet.
+
 - [Sara Stoudt '15](https://sastoudt.github.io/): I spent the year teaching other Smithies! My favorite activity was making ["data phys"](https://nebigdatahub.org/data-visualization-beyond-the-screen/) to help visualizations come to life off our screens. Another highlight of the year was the release of Deb Nolan and my book, *Communicating with Data: The Art of Writing for Data Science*. [Check it out!](https://twitter.com/sastoudt/status/1390675020209340420?s=20). Now I'm off to my next adventure at Bucknell University where I'll start as an Assistant Professor in the fall. 
 
 ## What's next? 
