--- a/www/sds_newsletter_2021.Rmd
+++ b/www/sds_newsletter_2021.Rmd
@@ -8,6 +8,12 @@ output:
     toc_float: true
 ---
 
+It's been a wild ride these past 12 months!
+Last summer, we still didn't know whether students would be on campus in the fall, or what would happen with the rest of the academic year, the US presidential election, and oh yeah, the coronavirus pandemic.
+We now have clarity and closure on...*most?*...of these issues. 
+Teaching remotely was exhausting for faculty and students alike, but somehow we muddled through. 
+We're united in celebrating the accomplishments of our faculty, students, and alums, and welcoming the promise of a full return to in-person campus life in the fall! 
+
 This newsletter is mostly a distillation of our Twitter @[SmithCollegeSDS](https://twitter.com/SmithCollegeSDS) feed. Please follow us to see more news, updates, and pictures!
 
 There is also a [Facebook group](
@@ -15,6 +21,39 @@ https://www.facebook.com/groups/665780273559948/), a Google group, and a [Slack]
 
 ## Program Updates
 
+- **Miles Ott '01** was named the 2021 LGBTQ+ Educator of the Year by STEM for Equality! Miles received amazing nomination letters from **Natalie LaBossier '20**, **Emily Daubenspeck '20**, and **Amelia Eigerman '21**, among others. 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr"><a href="https://twitter.com/Miles_Ott?ref_src=twsrc%5Etfw">@Miles_Ott</a> is the <a href="https://twitter.com/STEMforEquality?ref_src=twsrc%5Etfw">@STEMforEquality</a> 2021 LGBTQ+ Educator of the Year! Congrats! We hope you are celebrating this achievement with <a href="https://twitter.com/SmithCollegeSDS?ref_src=twsrc%5Etfw">@SmithCollegeSDS</a> and your many student nominators. Learn more about Miles at <a href="https://t.co/QM5J3GRd6e">https://t.co/QM5J3GRd6e</a>. <a href="https://twitter.com/hashtag/STEM?src=hash&amp;ref_src=twsrc%5Etfw">#STEM</a> <a href="https://twitter.com/hashtag/LGBTQIA?src=hash&amp;ref_src=twsrc%5Etfw">#LGBTQIA</a> <a href="https://twitter.com/hashtag/queer?src=hash&amp;ref_src=twsrc%5Etfw">#queer</a> <a href="https://twitter.com/hashtag/Statistics?src=hash&amp;ref_src=twsrc%5Etfw">#Statistics</a> <a href="https://twitter.com/hashtag/Datascience?src=hash&amp;ref_src=twsrc%5Etfw">#Datascience</a> <a href="https://t.co/zynWSvIjXN">pic.twitter.com/zynWSvIjXN</a></p>&mdash; NOGLSTP is Out to Innovate (@STEMforEquality) <a href="https://twitter.com/STEMforEquality/status/1395513119275773953?ref_src=twsrc%5Etfw">May 20, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+- **Starry Zhou '21J** and **Hannah Snell '21** shared Smith's portion of the Five College Statistics Prize for their working with Smithies in SDS. 
+
+- **Audrey Bertin '21** won the SDS Research Prize for her honors thesis, titled: "Addressing The Scientific Reproducibility Crisis Through Educational Software Integration". Based on her research, Audrey also co-authored [a peer-reviewed journal paper](https://onlinelibrary.wiley.com/doi/10.1002/sta4.332) that appeared in STAT. 
+
+- **Xian (Elaine) Ye ’21**, **Hannah Snell ’21**, **Dianne Caravela ’22**, **Natalia Iannucci ’22**, **Juliet Ramey-Lariviere ’22**, **Ivy Chen ’22**, **Kathleen Hablutzel ’23**, **Clara Li ’23**, and **Rose Porta ’23** were all recognized by the [Undergraduate Statistics Project Competition](https://www.causeweb.org/usproc/usclap/2020/fall/winners) for their work in intermediate statistics. 
+
+- Teaching remotely led to some opportunities for innovation. Thanks to Jon Caris and the Spatial Analysis Lab, students in SDS 192 were able to tour the MacLeish Field Station virtually during a live drone flight during class!
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Gratitude to <a href="https://twitter.com/AirdataUAV?ref_src=twsrc%5Etfw">@AirdataUAV</a> for enabling live stream drone flights for <a href="https://twitter.com/smithcollege?ref_src=twsrc%5Etfw">@smithcollege</a> <a href="https://twitter.com/SmithCollegeSDS?ref_src=twsrc%5Etfw">@SmithCollegeSDS</a> class. <a href="https://twitter.com/BaumerBen?ref_src=twsrc%5Etfw">@BaumerBen</a> provided great play by play analysis and we plan to do again soon! <a href="https://twitter.com/hashtag/somanymovingparts?src=hash&amp;ref_src=twsrc%5Etfw">#somanymovingparts</a> <a href="https://t.co/tPxR01tvay">pic.twitter.com/tPxR01tvay</a></p>&mdash; GIS @ Smith College (@SmithGIS) <a href="https://twitter.com/SmithGIS/status/1339210090247835648?ref_src=twsrc%5Etfw">December 16, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+- **Stephanie Eckman '94** gave a talk in SDS 192 about her research in using computer vision to detect housing units from satellite imagery.  
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Thanks for coming to talk to my <a href="https://twitter.com/SmithCollegeSDS?ref_src=twsrc%5Etfw">@SmithCollegeSDS</a> <a href="https://twitter.com/hashtag/DataScience?src=hash&amp;ref_src=twsrc%5Etfw">#DataScience</a> class today <a href="https://twitter.com/stephnie?ref_src=twsrc%5Etfw">@stephnie</a>!! I really enjoyed hearing about your research and appreciated all the ways in which it connected to topics we&#39;ve raised in the course.</p>&mdash; Ben Baumer (@BaumerBen) <a href="https://twitter.com/BaumerBen/status/1327330660604928002?ref_src=twsrc%5Etfw">November 13, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+- Several students will get practical experience with real-world data science projects thanks to the NSF-funded DSC-WAV project. The three-year grant shared with the Five Colleges pairs students with local non-profits. 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">A new data sciences program offers Smith students a chance to apply their skills, while also helping community groups solve data problems they might otherwise be unable to tackle. <a href="https://t.co/bznrcubuJY">https://t.co/bznrcubuJY</a> <a href="https://t.co/U70C3gukQk">pic.twitter.com/U70C3gukQk</a></p>&mdash; Smith College (@smithcollege) <a href="https://twitter.com/smithcollege/status/1326170338040958978?ref_src=twsrc%5Etfw">November 10, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+- **Miles Ott '01** and **Mine Dogucu '09** co-authored a textbook on Bayesian statistics.
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">📘Excited to share the first 5 chapters of ~Bayes Rules!~ An Introduction to Bayesian Modeling with R, which I have had the absolute joy of working on with <a href="https://twitter.com/MineDogucu?ref_src=twsrc%5Etfw">@MineDogucu</a> and Alicia Johnson of <a href="https://twitter.com/Macalester?ref_src=twsrc%5Etfw">@Macalester</a><br><br>📘Check it out here: <a href="https://t.co/ix6lZLdNaC">https://t.co/ix6lZLdNaC</a> <a href="https://t.co/kvAi9Wf7xf">pic.twitter.com/kvAi9Wf7xf</a></p>&mdash; Miles Ott 🏳️‍⚧️ (he/him) (@Miles_Ott) <a href="https://twitter.com/Miles_Ott/status/1315770302463455232?ref_src=twsrc%5Etfw">October 12, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+- **Adriana Beltrán Andrade '22** and **Chichi Wu '22** won the Service Track 🏆 for their &quot;Block&quot; venture in this year&#39;s Draper Competition for Collegiate Women Entrepreneurs!
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Congrats to <a href="https://twitter.com/SmithCollegeSDS?ref_src=twsrc%5Etfw">@SmithCollegeSDS</a> majors Adriana Beltrán Andrade &amp; Chichi Wu for winning the Service Track 🏆 for their &quot;Block&quot; venture in this year&#39;s Draper Competition for Collegiate Women Entrepreneurs! <a href="https://t.co/nYjbRt2BNO">https://t.co/nYjbRt2BNO</a> <a href="https://t.co/7eEXMhGvxo">pic.twitter.com/7eEXMhGvxo</a></p>&mdash; Smith College SDS (@SmithCollegeSDS) <a href="https://twitter.com/SmithCollegeSDS/status/1292947110573281288?ref_src=twsrc%5Etfw">August 10, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+- **Marium Tapal '22** published the `fec16` package on CRAN.
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Hey <a href="https://twitter.com/hashtag/rstats?src=hash&amp;ref_src=twsrc%5Etfw">#rstats</a>! My first R📦&#39;fec16&#39; is live on CRAN. fec16 contains relational data from the 2016 United States Federal Elections in the form of pre-loaded datasets and functions. <br>GitHub repo: <a href="https://t.co/RNcKwAkW0e">https://t.co/RNcKwAkW0e</a></p>&mdash; Marium Tapal (@mariumtapal) <a href="https://twitter.com/mariumtapal/status/1288834414747811840?ref_src=twsrc%5Etfw">July 30, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 ### Previous Updates
 
@@ -131,10 +170,13 @@ As if I wasn't excited enough for my start day at Smith, that same day an articl
 
 ### Joint Statistical Meetings
 
-Many of us will be at the virtual Joint Statistical Meetings at the end of the month. We wish we could see you in person, but we'll have to settle for Zoom waves this year. `r emo::ji("disappointed")`
+Many of us will be at the virtual [2021 Joint Statistical Meetings](https://ww2.amstat.org/meetings/jsm/2021/onlineprogram/index.cfm) during the second week of August. 
+We wish we could see you in person, but we'll have to settle for Zoom waves this year. `r emo::ji("disappointed")`
 
 ### StatFest
 
+[StatFest 2021](https://community.amstat.org/cmis/events/statfest/statfest-2021) will also be virtual in September.
 
 ### Women in Statistics and Data Science Conference
 
+[WSDS 2021](https://ww2.amstat.org/meetings/wsds/2021/) will also be virtual in October. 
