--- a/www/sds_newsletter_2021.Rmd
+++ b/www/sds_newsletter_2021.Rmd
@@ -150,11 +150,19 @@ As if I wasn't excited enough for my start day at Smith, that same day an articl
 
 #### Fatou Sanogo
 
+I am excited to be joining the SDS program as a lecturer for the year! I just finished my PhD in applied mathematics at the University of Alabama at Birmingham (UAB) this summer and I am looking forward to teaching intro stats and Modeling for Machine Learning at Smith.
+
+I have lived in Birmingham since I first came to the US back in 2013 and this will be a big move for me. I can’t wait to start this new adventure at Smith :) I am planning on a 3 days road trip from Birmingham to Northampton which should be fun!
+
 ## Alumni Updates
 
 - [Anna Ballou '20](https://www.linkedin.com/in/anna-ballou/): I just finished my first year of my PhD in Quantitative Epidemiology at the University of North Carolina, Chapel Hill.  I am studying the sex-specific effects of the genetic architecture of various diseases. I've also worked on generating several graphics and figures for my lab's publications. 
 
 - [Brittany Bennett '16](https://www.linkedin.com/in/thebbennett/): is on her second year of serving as the Data Director of the Sunrise Movement. She leverages analytics engineering to uncover insight for organizers working to pass a Green New Deal. [You can follow her writing here](https://www.brittanybennett.com/blog)
+
+- [Stephanie Eckman '94](https://www.linkedin.com/in/stephanie-eckman-090224aa/): Currently a Fellow at RTI International where I conduct research into data quality. I was elected a fellow of the ASA this year.
+
+- [Shuli Hu '18](https://www.linkedin.com/in/shuli-hu-371309a6): I finished the [Research Assistant Program](https://www.imf.org/en/About/Recruitment/working-at-the-imf/research-assistant-program) at the International Monetary Fund and will be starting the MBA program at the University of Cambridge in a few months. I cannot ask for a more fulfilling and delightful post-undergrad experience. Besides, DC is a beautiful city for young adults. Working from home has made us even busier. After a hectic year, I am finally taking a break and spending more time with family and friends.
 
 - [Jennifer Kirk '08](linkedin.com/in/jennifer-l-kirk-4412875/): I’m still happily working as a statistical reviewer at US FDA’s Center for Biologics Evaluation and Research. I work primarily on vaccines, and the past year or so has been quite interesting, if nothing else. I’m also a member of the steering committee for the ASA Biopharm Section 2021 Regulator-Industry Workshop.  
   I’d like to put in an advertisement for the FDA’s summer fellowship program which is open to undergrads, grad students, and recent graduates in STEM fields (including non-citizens): https://orise.orau.gov/fda/.  
@@ -165,6 +173,9 @@ As if I wasn't excited enough for my start day at Smith, that same day an articl
 - [Lizzy (Atkins) Offermann '15](https://www.linkedin.com/in/elizabethoffermann/): Back in December 2020, I started my current role as the Senior Business Analyst for the 1,500+ provider Clinically Integrated Network for LifeBridge Health, a $2.5 billion regional health care organization based in northwest Baltimore and the surrounding counties. I govern the data quality and data flow across multiple electronic medical record (EMR) systems among a range of commercial, Medicaid, and Medicare value-based care programs, contributing to a deep knowledge of data integration in and out of EMRs. I have enjoyed working on an executive-level, overseeing the data for a multi-hospital network and providing usable data visualizations to leadership. In the meantime, I have been finishing up my master’s degree in Clinical and Translational Research from George Washington University and will officially conclude by the end of next month! I am currently working on my master's capstone project with Randy Frost, Professor Emeritus of Psychology and it has been truly fabulous to reconnect especially over an interesting study! In my free time (what is that again?), I have been busy enjoying life with my 3.5 year old twins and husband, continuing my role as the head of the Smith Alumnae Admissions for the tri-state area, appreciating my role on the Board of the Smith College Club of Baltimore, and have been progressing in my role as Treasurer on the Smith Class of 2015 Cabinet.
 
 - [Sara Stoudt '15](https://sastoudt.github.io/): I spent the year teaching other Smithies! My favorite activity was making ["data phys"](https://nebigdatahub.org/data-visualization-beyond-the-screen/) to help visualizations come to life off our screens. Another highlight of the year was the release of Deb Nolan and my book, *Communicating with Data: The Art of Writing for Data Science*. [Check it out!](https://twitter.com/sastoudt/status/1390675020209340420?s=20). Now I'm off to my next adventure at Bucknell University where I'll start as an Assistant Professor in the fall. 
+
+- [Kara Van Allen '20](https://www.linkedin.com/in/karavanallen/): I moved to Somerville just over a year ago and started working as a Litigation Analyst for a market research firm in Waltham. While I have enjoyed it as my first job after Smith, I am ready for my next adventure, hopefully one with a stronger statistics focus. I would love any and all support or leads from my Smith network!
+
 
 ## What's next? 
 
