--- a/www/patch_okcupid.Rmd
+++ b/www/patch_okcupid.Rmd
@@ -40,8 +40,11 @@ knitr::opts_chunk$set(echo = TRUE)
 - If I scrape data about other people and want to publish it, what is my responsibility to protect the privacy of the people whose information I scraped? 
 - How do my ethical responsibilities differ from my legal responsibilities? 
 - Are there technical solutions that could allow me to publish the data while protecting people's privacy? 
-- Are my ethical responsibitilies impacted by the value of the data? 
+- Are my ethical responsibilities impacted by the value of the data? 
 
+## [Bloom taxonomy](https://en.wikipedia.org/wiki/Bloom%27s_taxonomy#/media/File:Bloom%E2%80%99s_Taxonomy_Verbs.png)
+
+- Application: Students apply knowledge of data science ethics in real-world context
 
 ## Generalizability
 
