--- a/www/patch_social_networks.Rmd
+++ b/www/patch_social_networks.Rmd
@@ -23,7 +23,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Description of course/setting
 
-- Acutal: *Statistical Analysis of Social Network Data*
+- Actual: *Statistical Analysis of Social Network Data*
 - Generic: upper-level course that requires a second course in statistics, and preferably a programming course
 
 ## NAS ethical areas
@@ -37,6 +37,10 @@ knitr::opts_chunk$set(echo = TRUE)
 - Have students consider how abstraction (the way in which data are represented) strips context from the data, and talk about implications of that lack of context
 - Students apply general paper on ethics of survey data to the specific context of social network surveys: students create their own understanding of what makes social network data collection ethical. 
 - This is meant for the first day of class, so the main goal is to set the tone for the class that ethics must be considered throughout.
+
+## [Bloom taxonomy](https://en.wikipedia.org/wiki/Bloom%27s_taxonomy#/media/File:Bloom%E2%80%99s_Taxonomy_Verbs.png)
+
+- Application: Students apply knowledge of data science ethics in real-world context
 
 
 ## Generalizability
